--- a/html/about-me.html
+++ b/html/about-me.html
@@ -223,6 +223,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <!-- End Page Container -->
 </div>
 
+<footer class="w3-container w3-center w3-margin-top custom-text-body" style="background-color: transparent;">
+  <p>Check out this site on GitHub!</p>
+  <a href="https://github.com/rhysbratti/resume-server" target="_blank"><i class="fa fa-github custom-text-accent w3-hover-opacity w3-xlarge"></i></a>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
+
 
 <script src="//code.jquery.com/jquery.min.js"></script>
 <script>
