Updated resume experience

--- a/html/resume.html
+++ b/html/resume.html
@@ -68,10 +68,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right custom-text-accent"></i>Skills</b></p>
           <ul class="w3-ul">
-            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">code</i> Java, Python, Bash</li>
+            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">code</i> Java, Bash</li>
             <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">bug_report</i> jUnit, AssertJ</li>
             <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">api</i> Spring Boot, RESTful APIs</li>
-            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">terminal</i> Docker, Git, Github</li>
+            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">terminal</i> Unix, Linux/Bash, Docker, Git, Github</li>
           </ul>
           <br>
         </div>
