Corrected spelling mistakes, fixed resume experience section for BAH where it looks like a lot of text got copy-pasted over. Changed some wording

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -111,9 +111,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h3><span class="custom-text-accent">Test Driven Development</span></h3>
             <h4>- Through Unit and Integration tests, I work to ensure that our code base reaches a minimum 95% code coverage</h4>
             <h3><span class="custom-text-accent">Automation</span></h3>
-            <h4>- Bash scripts, CRON jobs, and occasionaly python: I am awlays looking for ways to automate & improve our day to day processes</h4>
+            <h4>- Bash scripts, CRON jobs, and occasionally python: I am always looking for ways to automate & improve our day to day processes</h4>
             <h3><span class="custom-text-accent">Integration</span></h3>
-            <h4>- Collaborating with other teams to design itegrations between platforms is at the core of my responsibilities</h4>
+            <h4>- Collaborating with other teams to design integrations between platforms is at the core of my responsibilities</h4>
           </div>
         </div>
         <div class="about-dynamic-card-back">
@@ -150,7 +150,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h4>- I am motivated by workplaces that recognize and reward hard work, while emphasizing personal development</h4>
             <h3><span class="custom-text-accent">A product</span> that is constantly improving</h3>
             <h4>- I am drawn to products that allow me to be a part of building something new</h4>
-            <h4>- New feature implementation being one of my strongest skill sets</h4>
           </div>
         </div>
         <div class="about-dynamic-card-back">
@@ -182,8 +181,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h1>What are you looking for?</h1>
             <h3><span class="custom-text-accent">An employee</span> that is motivated</h3>
             <h4>- You're looking for somebody who will go the extra mile to contribute positively to a great product</h4>
-            <h3><span class="custom-text-accent">A team member</span> who can collorate with others</h3>
-            <h4>- You want someone who excels at transparent communication and has experience in a collaborative environment</h4>
+            <h3><span class="custom-text-accent">A team member</span> who can collaborate with others</h3>
+            <h4>- You want someone who works well with others and has experience in a collaborative environment</h4>
             <h3><span class="custom-text-accent">A developer</span> who thinks outside of the box</h3>
             <h4>- You're looking for a developer that can innovate; Someone who isn't afraid to be wrong</h4>
             <h3><span class="custom-text-accent">An expert</span> who is eager to contribute to something awesome</h3>
@@ -208,7 +207,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h3><span class="custom-text-accent">Self Hosting</span></h3>
             <h4>- This very site is currently being hosted in a docker container on my home server!</h4>
             <h4>- Starting out just as a way to learn Linux a bit better, I've ended up hosting a lot of my own services!</h4>
-            <h4>- Some of these include media servers for photos, vidoes, and music, as well as password management tools.</h4>
+            <h4>- Some of these include media servers for photos, videos, and music, as well as password management tools.</h4>
             <a class="medium-text" href="/about-site">Check out the About This Site page for more info on how I'm hosting this site!</a>
             <br>
           </div>
