--- a/html/about-site.html
+++ b/html/about-site.html
@@ -86,7 +86,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <br>
             <h4 class="small">Nginx Proxy Manager + Cloudflare</h4>
             <hr class="thinline">
-            <h5>- Nginx Proxy Manager running in docker container on seperate Ubuntu Server VM</h5>
+            <h5>- Nginx Proxy Manager running in docker container on separate Ubuntu Server VM</h5>
             <h5>- NPM acts as reverse proxy, adding security and routing clients to the appropriate server</h5>
             <h5>- Cloudflare DNS routes traffic to my IP as well as implementing security like DDoS protection</h5>
             <h6>Find out more about Nginx Proxy Manager <a class="medium-text" href="https://nginxproxymanager.com/" target="_blank">on their site</a></h6>
@@ -112,7 +112,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h5>- Docker containers running on Ubuntu Server VM</h5>
             <h5>- Nginx Proxy Manager running on separate Ubuntu Server VM</h5>
             <h5>- All developed and configured remotely with Visual Studio Code docker server</h5>
-            <h5>- Remote maintenaince of Docker containers with Portainer</h5>
+            <h5>- Remote maintenance of Docker containers with Portainer</h5>
             <h6>Check out <a class="medium-text" href="https://github.com/coder/code-server" target="_blank">VS code server</a> for developing on remote servers</h6>
             <h6>Check out <a class="medium-text" href="https://github.com/portainer/portainer" target="_blank">Portainer</a> for handling multiple Docker containers easily</h6>
             <br>
