--- a/html/home.html
+++ b/html/home.html
@@ -64,7 +64,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="custom-dynamic-card-back">
             <div class="dynamic-card-text">
-              <h3>7 years experiece developing with Java</h3>
+              <h3>7 years experience developing with Java</h3>
               <h3>5 years experience as a software engineer</h3>
               <h3>4 years experience developing RESTful APIs</h3> 
               <h3>2 years experience with Spring Boot</h3>
