--- a/html/resume.html
+++ b/html/resume.html
@@ -95,7 +95,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <li><span class="custom-text-accent">Collaborate</span> with scrum team to drive business growth and client satisfaction through delivery of fully-tested products</li>
             <li><span class="custom-text-accent">Analyze</span> user story requirements to create scalable and efficient code</li>
             <li><span class="custom-text-accent">Handle</span> large scale functionality implementation as well as code architecture restructuring</li>
-            <li><span class="custom-text-accent">Spearheaded</span> load testing efforts using Gw3 fa-linkdinibana to allow for performance monitoring and alerting</li>
+            <li><span class="custom-text-accent">Spearheaded</span>  load testing efforts using Grafana's K6 Library</li>
+            <li><span class="custom-text-accent">Work</span> with team to develop and release a new version of our Facilities API with improved functionality and greater end-user satisfaction</li>
+            <li><span class="custom-text-accent">Leverage</span> JUnit & JaCoco to implement test-driven development through the use of unit and integration tests as well as ensure a minimum of 95% code coverage</li>
+            <li><span class="custom-text-accent">Construct</span> data visualizations through Kibana to allow for performance monitoring and alerting</li>
             <li><span class="custom-text-accent">Successfully</span> migrated several API's from Kubernetes to D2 to allow for a smoother deployment process</li>
           </ul>
           <hr>
@@ -120,13 +123,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <h2 class="custom-text-body w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge custom-text-accent"></i>Education</h2>
         <div class="w3-container custom-text-body">
           <h4 class="custom-text-accent"><b>University of North Carolina at Charlotte</b></h4>
-          <h6 class="custom-text-body"><i class="fa fa-calendar fa-fw w3-margin-right custom-text-accent"></i>Graduated <span class="custom-text-accent">2018</span></h6>
           <p>Bachelor's of Computer Science, Artificial Intelligence</p>
           <hr>
         </div>
         <div class="w3-container custom-text-body">
           <h4 class="custom-text-accent"><b>Rowan Cabarrus Community College</b></h4>
-          <h6 class="custom-text-body"><i class="fa fa-calendar fa-fw w3-margin-right custom-text-accent"></i>Graduated <span class="custom-text-accent">2016</span></h6>
           <p>Associate's of Science</p>
         </div>
       </div>
