Updating wording and formatting

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -55,7 +55,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-container" style="height: 50px;background-color: transparent;"></div>
 
     <div class="w3-container w3-card custom-card-background custom-text-body" style="height: auto;margin-left: 25px;margin-bottom: 10px;width: 100%;text-align: left;">
-      <h1>About me</h1>
+      <h1>About Me</h1>
       <button class="w3-button custom-accent-darkened custom-text-darkened" id="toggle-cards">Professional</button>
       <p class="small">Click to swap</p>
     </div>
@@ -87,12 +87,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h1>What got me started</h1>
             <h3><span class="custom-text-accent">How things work</span></h3>
             <h4>- I've always been interested in knowing how things work, taking things apart and putting them back together</h4>
-            <h4>- I've been called a "Tinkerer", I like to dig down into the nitty gritty detail and see what I can find.</h4>
+            <h4>- I've been called a "Tinkerer", I like to dig down into the nitty gritty detail and see what I can find</h4>
             <h3><span class="custom-text-accent">Problem Solving</span></h3>
-            <h4>- A fascination with technology alongside a propensity for problem solving, IT was a natural place for me.</h4>
-            <h4>- Whether its fixing a deployment bug or trying to get a new feature to work, I get a lot of joy from figuring things out.</h4>
+            <h4>- A fascination with technology alongside a propensity for problem solving, IT was a natural place for me</h4>
+            <h4>- Whether its fixing a deployment bug or trying to get a new feature to work, I get a lot of joy from figuring things out</h4>
             <h3><span class="custom-text-accent">From class to career</span></h3>
-            <h4>- After some self-taught fumbling, I took the first programming course that came my way.</h4>
+            <h4>- After some self-taught fumbling, I took the first programming course that came my way</h4>
             <h4>- Since then, I have found myself in a rare situation: with a career that I am both good at <b>and</b> find interesting!</h4>
           </div>
         </div>
@@ -105,7 +105,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="left-image" style="background-image: url('/media/terminal.png');background-position: left;background-size: cover;">
           </div>
           <div class="right-text">
-            <h1>My responsibilities</h1>
+            <h1>My Responsibilities</h1>
             <h3><span class="custom-text-accent">Implementation</span></h3>
             <h4>- When it comes to handling large scale refactoring, re-architecture, or new feature implementation, I'm the go-to member of my team</h4>
             <h3><span class="custom-text-accent">Test Driven Development</span></h3>
@@ -123,9 +123,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h1>What drives me</h1>
             <h3><span class="custom-text-accent">Problem Solving</span></h3>
             <h4>- You've probably noticed this one a few times on this site already!</h4>
-            <h4>- I've repeated it for a good reason - solving problems is my biggest draw to this line of work.</h4>
+            <h4>- I've repeated it for a good reason - solving problems is my biggest draw to this line of work</h4>
             <h3><span class="custom-text-accent">Learning</span></h3>
-            <h4>- Learning new languages/frameworks/technologies quickly is something I pride myself on. Its also something I look for in a role.</h4>
+            <h4>- Learning new languages/frameworks/technologies quickly is something I pride myself on. Its also something I look for in a role</h4>
             <h4>- Personal growth is important to me in the positions I take. I am motivated by learning things I didn't know before</h4>
             <h3><span class="custom-text-accent">Teaching others</span></h3>
             <h4>- On my teams, I'm typically the "nobody knows how this works, go try to figure it out" guy</h4>
@@ -143,9 +143,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="left-text">
             <h1>What am I looking for?</h1>
             <h3><span class="custom-text-accent">A role</span> that challenges me</h3>
-            <h4>- As a fast learner, I like to put my skills to the test picking up new languages and technologies.</h4>
+            <h4>- As a fast learner, I like to put my skills to the test picking up new languages and technologies</h4>
             <h3><span class="custom-text-accent">A team</span> that works cohesively</h3>
-            <h4>- I thrive in a team environment that prioritizes growth and transparent communication.</h4>
+            <h4>- I thrive in a team environment that prioritizes collaboration and transparent communication</h4>
             <h3><span class="custom-text-accent">A culture</span> that fosters growth</h3>
             <h4>- I am motivated by workplaces that recognize and reward hard work, while emphasizing personal development</h4>
             <h3><span class="custom-text-accent">A product</span> that is constantly improving</h3>
@@ -207,7 +207,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h3><span class="custom-text-accent">Self Hosting</span></h3>
             <h4>- This very site is currently being hosted in a docker container on my home server!</h4>
             <h4>- Starting out just as a way to learn Linux a bit better, I've ended up hosting a lot of my own services!</h4>
-            <h4>- Some of these include media servers for photos, videos, and music, as well as password management tools.</h4>
+            <h4>- Some of these include media servers for photos, videos, and music, as well as password management tools</h4>
             <a class="medium-text" href="/about-site">Check out the About This Site page for more info on how I'm hosting this site!</a>
             <br>
           </div>
