--- a/html/resume.html
+++ b/html/resume.html
@@ -61,7 +61,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large custom-text-accent"></i>Software Engineer, Senior Consultant</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large custom-text-accent"></i>Charlotte, NC</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large custom-text-accent"></i>Charlotte, NC (Remote)</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large custom-text-accent"></i>{{printf "%s" .Email}}</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large custom-text-accent"></i>{{printf "%s" .Phone}}</p>
           <p><i class="fa fa-linkedin fa-fw w3-margin-right w3-large custom-text-accent"></i><a href="https://www.linkedin.com/in/chrisbratti" target="_blank">https://www.linkedin.com/in/chrisbratti</a></p>
@@ -110,11 +110,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="w3-opacity small"><b>Special Applications Developer</b></h6>
           <h6 class="custom-text-body"><i class="fa fa-calendar fa-fw w3-margin-right custom-text-accent"></i>Jan 2019 - Aug 2021</h6>
           <ul>
-            <li><span class="custom-text-accent">Supported</span> production of core insurance policy management application, PolicyCenter Developed new functionality to allow PolicyCenter to be a seamless user experience</li>
-            <li><span class="custom-text-accent">Integrated</span> PolicyCenter with other Hartford application through REST APIs</li>
+            <li><span class="custom-text-accent">Supported</span> production of core insurance policy management application, PolicyCenter</li>
+            <li><span class="custom-text-accent">Developed</span></li> new functionality to allow PolicyCenter to be a seamless user experience
+            <li><span class="custom-text-accent">Integrated</span> PolicyCenter with other Hartford applications through REST APIs</li>
             <li><span class="custom-text-accent">Created</span> automated unit tests for APIs with Karate testing</li>
             <li><span class="custom-text-accent">Diagnosed</span> bugs and defects to improve code design</li>
-            <li><span class="custom-text-accent">Collaborated</span> with Scrum Team </li>
+            <li><span class="custom-text-accent">Collaborated</span> with Scrum Team members as well as members from outside teams to achieve goals and meet Sprint deadlines</li>
           </ul>
         </div>
       </div>
