--- a/html/home.html
+++ b/html/home.html
@@ -83,11 +83,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="custom-dynamic-card-back">
             <div class="dynamic-card-text">
               <h5>Hi there!</h5> 
-              <h5>I'm a software engineer with 5 years industry experience</h5>
+              <h5>My name is Rhys (or Chris if you'd like).</h5>
               <h5>I excel at using creative problem solving to provide efficient solutions to complex problems.</h5>
               <h5>I pride myself with being a quick learner, able to adapt to new technologies in a team oriented environment.</h5>
               <h5>Leveraging my industry experience along with my unique set of skills helps me exceed company expectations.</h5>
-              <a class="medium-text" href="/about-me">Learn more about me and what I'm looking for</a>
+              <a class="medium-text" href="/about-me">Learn more about me and what I'm looking for.</a>
             </div>
           </div>
         </div>
@@ -101,9 +101,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="custom-dynamic-card-back">
             <div class="dynamic-card-text">
-              <h3><i class="fa fa-phone fa-fw w3-large custom-text-body"></i>{{ .Phone }}</h3>
-              <h3><i class="fa fa-envelope fa-fw  w3-large custom-text-body"></i>{{ .Email }}</h3>
-              <h3><i class="fa fa-linkedin fa-fw w3-large custom-text-body"></i><a class="medium-ish-text" href="https://www.linkedin.com/in/chrisbratti" target="_blank">https://www.linkedin.com/in/chrisbratti</a></h3>
+              <h3><i class="fa fa-phone fa-fw w3-margin-right w3-large custom-text-body"></i>{{ .Phone }}</h3>
+              <h3><i class="fa fa-envelope fa-fw w3-margin-right w3-large custom-text-body"></i>{{ .Email }}</h3>
+              <h3><i class="fa fa-linkedin fa-fw w3-margin-right w3-large custom-text-body"></i><a class="medium-ish-text" href="https://www.linkedin.com/in/chrisbratti" target="_blank">https://www.linkedin.com/in/chrisbratti</a></h3>
               <a class="medium-text" href="/contact">Contact me</a>
             </div>
           </div>
