Added additional experience to resume

--- a/html/resume.html
+++ b/html/resume.html
@@ -69,9 +69,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right custom-text-accent"></i>Skills</b></p>
           <ul class="w3-ul">
             <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">code</i> Java</li>
-            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">bug_report</i> jUnit, AssertJ</li>
-            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">api</i> Spring Boot, RESTful APIs</li>
-            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">terminal</i> Unix, Linux/Bash, Docker, Git, Github</li>
+            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">bug_report</i> jUnit, AssertJ, Mockito, Lombok</li>
+            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">api</i> Spring Boot, RESTful APIs, Swagger</li>
+            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">integration_instructions</i>Docker, Git/Github, Postman, Jenkins, AWS</li>
+            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">terminal</i> Unix, Linux/Bash</li>
           </ul>
           <br>
         </div>
