Added in relevant experience, fixed formatting bug in resume

--- a/html/resume.html
+++ b/html/resume.html
@@ -68,7 +68,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right custom-text-accent"></i>Skills</b></p>
           <ul class="w3-ul">
-            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">code</i> Java</li>
+            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">code</i> Java, SQL</li>
             <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">bug_report</i> jUnit, AssertJ, Mockito, Lombok</li>
             <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">api</i> Spring Boot, RESTful APIs, Swagger</li>
             <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">integration_instructions</i>Docker, Git/Github, Postman, Jenkins, AWS</li>
@@ -112,7 +112,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="custom-text-body"><i class="fa fa-calendar fa-fw w3-margin-right custom-text-accent"></i>Jan 2019 - Aug 2021</h6>
           <ul>
             <li><span class="custom-text-accent">Supported</span> production of core insurance policy management application, PolicyCenter</li>
-            <li><span class="custom-text-accent">Developed</span></li> new functionality to allow PolicyCenter to be a seamless user experience
+            <li><span class="custom-text-accent">Built</span> reusable SQL queries against a complex data model for ad hoc business needs</li>
+            <li><span class="custom-text-accent">Developed</span>new functionality to allow PolicyCenter to be a seamless user experience</li> 
             <li><span class="custom-text-accent">Integrated</span> PolicyCenter with other Hartford applications through REST APIs</li>
             <li><span class="custom-text-accent">Created</span> automated unit tests for APIs with Karate testing</li>
             <li><span class="custom-text-accent">Diagnosed</span> bugs and defects to improve code design</li>
