--- a/html/resume.html
+++ b/html/resume.html
@@ -68,11 +68,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right custom-text-accent"></i>Skills</b></p>
           <ul class="w3-ul">
-            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">code</i> Java, SQL</li>
+            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">code</i> Java, Rust, SQL, Python</li>
             <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">bug_report</i> jUnit, AssertJ, Mockito, Lombok</li>
             <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">api</i> Spring Boot, RESTful APIs, Swagger</li>
             <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">integration_instructions</i>Docker, Git/Github, Postman, Jenkins, AWS</li>
-            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">terminal</i> Unix, Linux/Bash</li>
+            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">terminal</i>Linux/Bash</li>
           </ul>
           <br>
         </div>
@@ -95,12 +95,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <li><span class="custom-text-accent">Develop</span> and support Spring Boot RESTful APIs for VA contracts</li>
             <li><span class="custom-text-accent">Collaborate</span> with scrum team to drive business growth and client satisfaction through delivery of fully-tested products</li>
             <li><span class="custom-text-accent">Analyze</span> user story requirements to create scalable and efficient code</li>
-            <li><span class="custom-text-accent">Handle</span> large scale functionality implementation as well as code architecture restructuring</li>
-            <li><span class="custom-text-accent">Spearheaded</span>  load testing efforts using Grafana's K6 Library</li>
-            <li><span class="custom-text-accent">Work</span> with team to develop and release a new version of our Facilities API with improved functionality and greater end-user satisfaction</li>
+            <li><span class="custom-text-accent">Lead</span> large scale functionality implementation as well as code architecture restructuring</li>
             <li><span class="custom-text-accent">Leverage</span> JUnit & JaCoco to implement test-driven development through the use of unit and integration tests as well as ensure a minimum of 95% code coverage</li>
             <li><span class="custom-text-accent">Construct</span> data visualizations through Kibana to allow for performance monitoring and alerting</li>
-            <li><span class="custom-text-accent">Successfully</span> migrated several API's from Kubernetes to D2 to allow for a smoother deployment process</li>
+            <li><span class="custom-text-accent">Automate</span> tasks with Bash and Python scripts to streamline team productivity</li>
+            <li><span class="custom-text-accent">Spearheaded</span> deployment migration efforts to allow for a more robust deployment pipeline with Kubernetes and ArgoCD</li>            
+            <li><span class="custom-text-accent">Crafted</span> and executed load testing plans with Grafana's K6 library to provide insight into API load endurance</li>
           </ul>
           <hr>
         </div>
