--- a/html/about-site.html
+++ b/html/about-site.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Rhys Bratti</title>
+<title>Chris Bratti</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -75,7 +75,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <h5>- Golang webserver hosted in docker container</h5>
             <h5>- Other services, such as Authelia and Nginx Proxy Manager, also hosted in separate Docker containers</h5>
             <h5>- Portainer running to more easily manage multiple containers</h5>
-            <a class="medium-text" href="https://github.com/rhysbratti/resume-server" target="_blank">Check out this project on GitHub!</a>
+            <a class="medium-text" href="https://github.com/chris-bratti/resume-server" target="_blank">Check out this project on GitHub!</a>
         </div>
     </div>
 
@@ -135,7 +135,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-center w3-margin-top custom-text-body" style="background-color: transparent;">
   <p>Check out this site on GitHub!</p>
-  <a href="https://github.com/rhysbratti/resume-server" target="_blank"><i class="fa fa-github custom-text-accent w3-hover-opacity w3-xlarge"></i></a>
+  <a href="https://github.com/chris-bratti/resume-server" target="_blank"><i class="fa fa-github custom-text-accent w3-hover-opacity w3-xlarge"></i></a>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
