--- a/html/home.html
+++ b/html/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Rhys Bratti</title>
+<title>Chris Bratti</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -52,7 +52,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div class="w3-padding" style="margin-top: 45px;height: 1000px;background-color: transparent;">
 
     <div class="w3-container custom-text-body" style="text-align: center;height: 100px;background-color: transparent;padding-top: 400px;">
-        <h1 class="extra-large" style="font-family: 'Abril Fatface', serif;">Hi, I'm <span class="custom-text-accent">Rhys Bratti.</span></h1>
+        <h1 class="extra-large" style="font-family: 'Abril Fatface', serif;">Hi, I'm <span class="custom-text-accent">Chris Bratti.</span></h1>
         <h4 style="font-family: 'Lato', serif;line-height: .3;">${ s o f t w a r e _ e n g i n e e r }</h4>
       </div>
     <div style="background-color: transparent;padding-top: 1000px">
@@ -83,7 +83,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="custom-dynamic-card-back">
             <div class="dynamic-card-text">
               <h5>Hi there!</h5> 
-              <h5>My name is Rhys (or Chris if you'd like).</h5>
+              <h5>My name is Chris.</h5>
               <h5>I excel at using creative problem solving to provide efficient solutions to complex problems.</h5>
               <h5>I pride myself with being a quick learner, able to adapt to new technologies in a team oriented environment.</h5>
               <h5>Leveraging my industry experience along with my unique set of skills helps me exceed company expectations.</h5>
@@ -117,7 +117,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-center w3-margin-top custom-text-body" style="background-color: transparent;">
   <p>Check out this site on GitHub!</p>
-  <a href="https://github.com/rhysbratti/resume-server" target="_blank"><i class="fa fa-github custom-text-accent w3-hover-opacity w3-xlarge"></i></a>
+  <a href="https://github.com/chris-bratti/resume-server" target="_blank"><i class="fa fa-github custom-text-accent w3-hover-opacity w3-xlarge"></i></a>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
