Updating experience and wording

--- a/html/home.html
+++ b/html/home.html
@@ -64,10 +64,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="custom-dynamic-card-back">
             <div class="dynamic-card-text">
-              <h3>7 years experience developing with Java</h3>
-              <h3>5 years experience as a software engineer</h3>
-              <h3>4 years experience developing RESTful APIs</h3> 
-              <h3>2 years experience with Spring Boot</h3>
+              <h3>8 years experience developing with Java</h3>
+              <h3>6 years experience as a software engineer</h3>
+              <h3>5 years experience developing RESTful APIs</h3> 
+              <h3>4 years experience with Spring Boot</h3>
               <a class="medium-text" href="/resume">View my full resume</a>
             </div>
           </div>
@@ -84,9 +84,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <div class="dynamic-card-text">
               <h5>Hi there!</h5> 
               <h5>My name is Chris.</h5>
-              <h5>I excel at using creative problem solving to provide efficient solutions to complex problems.</h5>
-              <h5>I pride myself with being a quick learner, able to adapt to new technologies in a team oriented environment.</h5>
-              <h5>Leveraging my industry experience along with my unique set of skills helps me exceed company expectations.</h5>
+              <h5>I am a highly motivated Software Engineer with 6 years of professional experience designing, implementing, and deploying microservices.</h5>
+              <h5>I bring extensive experience developing RESTful APIs, test automation, and managing deployment pipelines.</h5>
+              <h5>I'm known for clear communication, a proven track record of delivering results, and a passion for solving complex problems.</h5>
               <a class="medium-text" href="/about-me">Learn more about me and what I'm looking for.</a>
             </div>
           </div>
