--- a/html/resume.html
+++ b/html/resume.html
@@ -54,7 +54,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="custom-card-background custom-text-body w3-card-4" style="margin-top:100px">
         <div class="w3-display-container">
-          <img src="../media/resume_photo.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container custom-card-background">
             <h2 class="custom-text-body">Chris Bratti</h2>
           </div>
@@ -67,11 +66,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right custom-text-accent"></i>Skills</b></p>
           <ul class="w3-ul">
-            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">code</i> Java, Rust, SQL, Python</li>
-            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">bug_report</i> jUnit, AssertJ, Mockito, Lombok</li>
-            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">api</i> Spring Boot, RESTful APIs, Swagger</li>
-            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">integration_instructions</i>Docker, Git/Github, Postman, Jenkins, AWS</li>
-            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">terminal</i>Linux/Bash</li>
+            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">code</i> Java, Rust, Bash, Python, SQL</li>
+            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">bug_report</i> Spring Boot, jUnit, AssertJ, Mockito</li>
+            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">integration_instructions</i>Docker, Kubernetes, AWS, Jenkins, ArgoCD</li>
+            <li><i class="material-icons fa-fw w3-margin-right w3-large custom-text-accent">terminal</i>Git, GitHub, Swagger, Postman, IntelliJ</li>
           </ul>
           <br>
         </div>
@@ -88,18 +86,16 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container custom-text-body">
           <h4 class="custom-text-accent"><b>Booz Allen Hamilton</b></h4>
           <h6 class="w3-opacity small"><b>Software Engineer, Senior Consultant</b></h6>
-          <h6 class="w3-opacity small"><b>Software Engineer</b></h6>
           <h6 class="custom-text-body"><i class="fa fa-calendar fa-fw w3-margin-right custom-text-accent"></i>Aug 2021- <span class="w3-tag custom-accent-color w3-round">Current</span></h6>
           <ul>
-            <li><span class="custom-text-accent">Develop</span> and support Spring Boot RESTful APIs for VA contracts</li>
-            <li><span class="custom-text-accent">Collaborate</span> with scrum team to drive business growth and client satisfaction through delivery of fully-tested products</li>
-            <li><span class="custom-text-accent">Analyze</span> user story requirements to create scalable and efficient code</li>
-            <li><span class="custom-text-accent">Lead</span> large scale functionality implementation as well as code architecture restructuring</li>
-            <li><span class="custom-text-accent">Leverage</span> JUnit & JaCoco to implement test-driven development through the use of unit and integration tests as well as ensure a minimum of 95% code coverage</li>
-            <li><span class="custom-text-accent">Construct</span> data visualizations through Kibana to allow for performance monitoring and alerting</li>
-            <li><span class="custom-text-accent">Automate</span> tasks with Bash and Python scripts to streamline team productivity</li>
-            <li><span class="custom-text-accent">Spearheaded</span> deployment migration efforts to allow for a more robust deployment pipeline with Kubernetes and ArgoCD</li>            
-            <li><span class="custom-text-accent">Crafted</span> and executed load testing plans with Grafana's K6 library to provide insight into API load endurance</li>
+            <li><span class="custom-text-accent">Develop</span> and maintain suite of Spring Boot RESTful APIs</li>
+            <li><span class="custom-text-accent">Lead</span> functionality implementation and project architecture planning</li>
+            <li><span class="custom-text-accent">Collaborate</span> with internal and external teams to deliver fully-tested, production ready solutions</li>
+            <li><span class="custom-text-accent">Lead</span> large scale functionality implementation as well as code architecture planning</li>
+            <li><span class="custom-text-accent">Apply</span> Test-Driven Development principles using JUnit, maintaining 95%+ code coverage</li>
+            <li><span class="custom-text-accent">Deploy</span> applications into a Highly-Available EKS Kubernetes environment</li>
+            <li><span class="custom-text-accent">Automate</span> workflows and processes by building tooling with Bash, Rust, and Python</li>
+            <li><span class="custom-text-accent">Mentor</span> junior employees to create an environment suitable for learning while ensuring best code practices</li>            
           </ul>
           <hr>
         </div>
@@ -110,13 +106,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="w3-opacity small"><b>Special Applications Developer</b></h6>
           <h6 class="custom-text-body"><i class="fa fa-calendar fa-fw w3-margin-right custom-text-accent"></i>Jan 2019 - Aug 2021</h6>
           <ul>
-            <li><span class="custom-text-accent">Supported</span> production of core insurance policy management application, PolicyCenter</li>
-            <li><span class="custom-text-accent">Built</span> reusable SQL queries against a complex data model for ad hoc business needs</li>
-            <li><span class="custom-text-accent">Developed</span>new functionality to allow PolicyCenter to be a seamless user experience</li> 
-            <li><span class="custom-text-accent">Integrated</span> PolicyCenter with other Hartford applications through REST APIs</li>
-            <li><span class="custom-text-accent">Created</span> automated unit tests for APIs with Karate testing</li>
-            <li><span class="custom-text-accent">Diagnosed</span> bugs and defects to improve code design</li>
-            <li><span class="custom-text-accent">Collaborated</span> with Scrum Team members as well as members from outside teams to achieve goals and meet Sprint deadlines</li>
+            <li><span class="custom-text-accent">Supported</span> the development of PolicyCenter, a core insurance platform</li>
+            <li><span class="custom-text-accent">Developed</span> automation scripts using Python to improve error detection and streamline workflows</li>
+            <li><span class="custom-text-accent">Spearheaded</span> migration of legacy SOAP services to modern RESTful APIs</li> 
+            <li><span class="custom-text-accent">Integrated</span> PolicyCenter with other applications within the Hartford</li>
+            <li><span class="custom-text-accent">Automated</span> API testing using the Karate framework</li>
+            <li><span class="custom-text-accent">Designed</span> and optimized reusable SQL queries for ad hoc business needs</li>
           </ul>
         </div>
       </div>
