Rephrasing some things

--- a/html/resume.html
+++ b/html/resume.html
@@ -95,7 +95,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <li><span class="custom-text-accent">Apply</span> Test-Driven Development principles using JUnit, maintaining 95%+ code coverage</li>
             <li><span class="custom-text-accent">Deploy</span> applications into a Highly-Available EKS Kubernetes environment</li>
             <li><span class="custom-text-accent">Automate</span> workflows and processes by building tooling with Bash, Rust, and Python</li>
-            <li><span class="custom-text-accent">Mentor</span> junior employees to create an environment suitable for learning while ensuring best code practices</li>            
+            <li><span class="custom-text-accent">Mentor</span> junior staff to cultivate a learning environment and uphold coding best practices</li>            
           </ul>
           <hr>
         </div>
